--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>The Quack</title>
 </head>
 <body>
-    <h1>DO THE WADDLE</h1>
+    <h1>Teach me how to WADDLE..... Potentially</h1>
 </body>
 </html>
