--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Teach me how to WADDLE..... Potentially</h1>
-     <h2>got any bread, bro?</h2>
+    <h2>got any bread, bro?</h2>
+
+    <p>GO DUCK GO DUCK GO GO GO DUCK</p>
+    <img src="images/giphy.gif" alt="Dancing duck">
 </body>
 </html>
